src/objects/Apttus__LiteUserException__c.object
<CustomObject>
    <description>Hold lite user&apos;s login violation details</description>
    <fields>
        <fullName>Apttus__AllowedLoginCount__c</fullName>
        <description>Number of login allowed for lite user</description>
        <inlineHelpText>Number of login allowed for the lite user</inlineHelpText>
        <label>Allowed Login Count</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus__LastLoginCount__c</fullName>
        <description>Number of logins happened for the given period</description>
        <inlineHelpText>Number of logins for the given period</inlineHelpText>
        <label>Login Count for Given Period</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus__PeriodEndDate__c</fullName>
        <description>End date of the login count</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>End date of the login count period</inlineHelpText>
        <label>Period End Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Apttus__PeriodStartDate__c</fullName>
        <description>Start date of the login count begin</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Start date of the login count period</inlineHelpText>
        <label>Period Start Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Apttus__Profile__c</fullName>
        <description>Name of the lite profile</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Name of the lite profile</inlineHelpText>
        <label>Profile</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus__UserId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>User Id belongs to lite profiles</description>
        <inlineHelpText>User Id</inlineHelpText>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Lite_Users_Exception</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Lite User Usage Exception</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>LiteUserException Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Lite Users Usage Exception</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>